--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -10,6 +10,7 @@ $keyboard-color: color.scale($website-bg-color, $lightness: -40%);
 $key-color: $keyboard-color;
 $input-field-color: $keyboard-color;
 $submit-btn-color: color.scale($input-field-color, $lightness: +15%);
+$led-indicators-off-color: color.scale($submit-btn-color, $lightness: +15%);
 $borders-color: #bebebe;
 $rgb-lighting-color: #49ff18;
 // Viewport size
